# eeeee

./: .gitattributes  .gitignore  Cargo.toml  README.md  build  docs-generator.py  grammar.ebnf  parser.c  parser.h  stuff.md  test.esc  testing.txt  things.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  generate-site.yml  macos.yml  main.yml  ubuntu.yml  windows.yml
archive/: .gitignore  LICENSE
archive/compiler/: .eslintrc.js  package-lock.json  package.json  test.esc
archive/docs-source/: introduction.md
archive/vscode-escurieux/: CHANGELOG.md  language-configuration.json  package-lock.json
compiler/: .eslintrc.js  expressions  package-lock.json  package.json  test.esc  tsconfig.json
compiler/src/: compiler.ts  explanations.ts  expression-processor.ts  expressions.ts  main.ts  parser.ts  tokenizer.ts  tokens.ts  utilities.ts
docs/: index.html  index.md  introduction.html  introduction.md  script.js  theme.css
docs-source/: index.md  introduction.md  script.js  theme.css
esc-py/: errors.py  main.py  modules.py  parser.py  parser_.py  text.py  tokenizer.py  tokens.py  typing_.py  util.py
src/: ast.rs  compiler.rs  errors.rs  expressions.rs  ice.rs  lexer.rs  lib.rs  loader.rs  main.rs  token_debugger.rs  tokens.rs  typing.rs  vm.rs
src/parser/: mod.rs  precedence.rs
std/: logic.eee  math.eee  mod.eee
vscode-escurieux/: README.md  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
vscode-escurieux/src/: extension.ts
vscode-escurieux/syntaxes/: escurieux.tmLanguage.json
(+8 files in other folders)
